syntax = "proto3";

package traceguard.v1;

service TraceGuardService {
  rpc CreateSBOM (CreateSBOMRequest) returns (CreateSBOMResponse);
  rpc ListSBOMs (ListSBOMsRequest) returns (ListSBOMsResponse);
  rpc CreateProvenanceRecord (CreateProvenanceRecordRequest) returns (CreateProvenanceRecordResponse);
  rpc ListProvenanceRecords (ListProvenanceRecordsRequest) returns (ListProvenanceRecordsResponse);
  rpc GenerateComplianceReport (GenerateComplianceReportRequest) returns (GenerateComplianceReportResponse);
}

message SBOM {
  string id = 1;
  string format = 2;
  string content = 3;
}

message ProvenanceRecord {
  string id = 1;
  string artifact_id = 2;
  int32 slsa_level = 3;
  string content = 4;
}

message CreateSBOMRequest {
  SBOM sbom = 1;
}

message CreateSBOMResponse {
  string id = 1;
}

message ListSBOMsRequest {
  int32 page = 1;
  int32 page_size = 2;
}

message ListSBOMsResponse {
  repeated SBOM sboms = 1;
  int32 total = 2;
}

message CreateProvenanceRecordRequest {
  ProvenanceRecord record = 1;
}

message CreateProvenanceRecordResponse {
  string id = 1;
}

message ListProvenanceRecordsRequest {
  int32 page = 1;
  int32 page_size = 2;
}

message ListProvenanceRecordsResponse {
  repeated ProvenanceRecord records = 1;
  int32 total = 2;
}

message GenerateComplianceReportRequest {
  string sbom_id = 1;
}

message GenerateComplianceReportResponse {
  string report = 1;
}